# LaerningAndroidVulkan

./: .gitmodules  settings.gradle
android/: settings.gradle
android/cube/: build.gradle
android/cube/src/androidTest/java/com/ihuntto/tiny_engine/cube/: ExampleInstrumentedTest.java
android/cube/src/main/: AndroidManifest.xml
android/cube/src/main/cpp/: CMakeLists.txt  cube_application.cpp  cube_application.h  native-lib.cpp
android/cube/src/main/java/com/ihuntto/android_vulkan/cube/: MainActivity.java
android/cube/src/main/res/values/: strings.xml
android/model/: build.gradle
android/model/src/main/: AndroidManifest.xml
android/model/src/main/cpp/: CMakeLists.txt  model_application.cpp  model_application.h  native-lib.cpp
android/model/src/main/res/values-night/: themes.xml
android/model/src/main/shaders/: base.frag
android/texture/: build.gradle
android/texture/src/main/: AndroidManifest.xml
android/texture/src/main/cpp/: CMakeLists.txt  native-lib.cpp  texture_application.cpp  texture_application.h  triangle_application.h
android/texture/src/main/res/values/: strings.xml
android/texture/src/main/shaders/: base.frag
android/touch_pointer/: build.gradle
android/touch_pointer/src/main/: AndroidManifest.xml
android/touch_pointer/src/main/cpp/: CMakeLists.txt  native-lib.cpp  touch_pointer_application.cpp  touch_pointer_application.h
android/touch_pointer/src/main/res/layout/: activity_main.xml
android/touch_pointer/src/main/res/values/: strings.xml  themes.xml
android/touch_pointer/src/main/shaders/: base.frag  base.vert
android/triangle/: build.gradle
android/triangle/src/main/: AndroidManifest.xml
android/triangle/src/main/cpp/: native-lib.cpp  triangle_application.cpp  triangle_application.h
android/triangle/src/main/res/values/: strings.xml
app/: build.gradle
app/src/androidTest/java/com/ihuntto/tiny_engine/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp  triangle_application.cpp  triangle_application.h
app/src/main/cpp/tiny_engine/: filesystem.cpp  log.h  vulkan_application.cpp  vulkan_application.h
app/src/main/java/com/ihuntto/tiny_engine/: MainActivity.java
app/src/main/res/values/: strings.xml
app/src/test/java/com/ihuntto/tiny_engine/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
(+16 files in other folders)
